# plugin-spoiler

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
